# django-logviewer

./: .gitignore  CHANGELOG.md  pyproject.toml
logviewer/: site.py
logviewer/templates/: logviewer.html
